@@ -1,3 +1,10 @@
+2007-06-02  Jens Granseuer  <jensgr@gmx.net>
+
+	* at-startup-session.c:
+	* at-startup-session.h: remove obsolete files
+	* main.c: (at_enable_toggled): remove leftover bits from bug
+	#386413 to make distcheck pass
+
 2007-05-05  Jens Granseuer  <jensgr@gmx.net>
 
 	* at-enable-dialog.glade:
